--- a/src/pages/Produtos/CardProdutos.css
+++ b/src/pages/Produtos/CardProdutos.css
@@ -1,6 +1,16 @@
 .container{
-    background-color: gray;
+    background-color: rgb(255, 255, 255);
 }
+
 h2{
-    color: red
+    color: rgb(0, 0, 0)   
+}
+
+img{
+width: 40%;
+border: 40%;
+margin: 20%;
+}
+p{
+    font-size: 1.3rem;
 }
