--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -2,12 +2,13 @@
 
     height: 60px; /* altura da navbar */
     align-items: center ;
-    justify-content: space-between;
+    justify-content:space-evenly;
     
   }
 
   .navbar-brand {
     font-size: 2.5rem;
+    text-decoration: solid;
   }
 
 
