--- a/src/pages/Produtos/CardProdutos.css
+++ b/src/pages/Produtos/CardProdutos.css
@@ -1,14 +1,5 @@
 .container{
-  
-   
-    align-items: center;
-    justify-content: center;
-    
-}
-.divTextos{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    background-color: rgb(255, 255, 255);
 }
 
 h2{
@@ -22,8 +13,4 @@ margin: 20%;
 }
 p{
     font-size: 1.3rem;
-}
-.botaoDeletar{
-    display: flex;
-    justify-content: center;
 }
